--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   "devDependencies": {
     "@editorjs/editorjs": "^2.12.3",
     "@types/react": "^16.8.12",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "react": "^16.8.6",
     "rollup": "^1.8.0",
     "rollup-plugin-typescript2": "^0.20.1",
