--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,5 @@
 {
-  "extends": "standard"
+  "parser": "@typescript-eslint/parser",
+  "extends": "standard",
+  "plugins": ["@typescript-eslint/eslint-plugin"]
 }
