--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "react-editor-js",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "The unofficial editor-js component for React",
   "author": "Jungwoo An <o1o9814@naver.com>",
   "keywords": [
     "react",
     "editor",
     "editor.js",
-    "editorjs"
+    "editorjs",
+    "@editorjs"
   ],
   "main": "./dist/react-editor-js.umd.js",
   "module": "./dist/react-editor-js.js",
@@ -24,7 +25,6 @@
     "url": "https://github.com/Jungwoo-An/react-editor-js/issues"
   },
   "devDependencies": {
-    "@editorjs/editorjs": "^2.12.3",
     "@types/react": "^16.8.12",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
@@ -34,9 +34,28 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "react": "^16.8.6",
     "rollup": "^1.8.0",
     "rollup-plugin-typescript2": "^0.20.1",
     "typescript": "^3.4.1"
+  },
+  "peerDependencies": {
+    "@editorjs/checklist": "^1.1.0",
+    "@editorjs/code": "^2.4.1",
+    "@editorjs/delimiter": "^1.1.0",
+    "@editorjs/editorjs": "^2.12.4",
+    "@editorjs/embed": "^2.2.0",
+    "@editorjs/header": "^2.2.3",
+    "@editorjs/image": "^2.3.0",
+    "@editorjs/inline-code": "^1.3.0",
+    "@editorjs/link": "^2.1.2",
+    "@editorjs/list": "^1.3.4",
+    "@editorjs/marker": "^1.2.0",
+    "@editorjs/paragraph": "^2.5.0",
+    "@editorjs/quote": "^2.2.0",
+    "@editorjs/raw": "^2.1.1",
+    "@editorjs/simple-image": "^1.3.1",
+    "@editorjs/table": "^1.2.0",
+    "@editorjs/warning": "^1.1.0",
+    "react": "^16.8.6"
   }
 }
