--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "declaration": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "baseUrl": "./",
+    "typeRoots": ["node_modules/@types", "@types"]
   }
 }
