--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "module": "./dist/react-editor-js.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rollup --config --environment NODE_ENV:production"
+    "build": "rollup --config --environment NODE_ENV:production",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "license": "MIT",
   "repository": {
@@ -25,20 +27,6 @@
     "url": "https://github.com/Jungwoo-An/react-editor-js/issues"
   },
   "devDependencies": {
-    "@types/react": "^16.8.12",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "rollup": "^1.8.0",
-    "rollup-plugin-typescript2": "^0.20.1",
-    "typescript": "^3.4.1"
-  },
-  "peerDependencies": {
     "@editorjs/checklist": "^1.1.0",
     "@editorjs/code": "^2.4.1",
     "@editorjs/delimiter": "^1.1.0",
@@ -56,6 +44,24 @@
     "@editorjs/simple-image": "^1.3.1",
     "@editorjs/table": "^1.2.0",
     "@editorjs/warning": "^1.1.0",
-    "react": "^16.8.6"
+    "@types/react": "^16.8.12",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "react": "^16.8.6",
+    "rollup": "^1.8.0",
+    "rollup-plugin-typescript2": "^0.20.1",
+    "typescript": "^3.4.1",
+    "@storybook/react": "^5.0.10",
+    "@storybook/addon-actions": "^5.0.10",
+    "@storybook/addon-links": "^5.0.10",
+    "@storybook/addons": "^5.0.10",
+    "@babel/core": "^7.4.3",
+    "babel-loader": "^8.0.5"
   }
 }
