--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-editor-js",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "The unofficial editor-js component for React",
   "author": "Jungwoo An <o1o9814@naver.com>",
   "keywords": [
@@ -27,6 +27,7 @@
     "url": "https://github.com/Jungwoo-An/react-editor-js/issues"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
     "@editorjs/checklist": "^1.1.0",
     "@editorjs/code": "^2.4.1",
     "@editorjs/delimiter": "^1.1.0",
@@ -44,9 +45,14 @@
     "@editorjs/simple-image": "^1.3.1",
     "@editorjs/table": "^1.2.0",
     "@editorjs/warning": "^1.1.0",
+    "@storybook/addon-actions": "^5.0.10",
+    "@storybook/addon-links": "^5.0.10",
+    "@storybook/addons": "^5.0.10",
+    "@storybook/react": "^5.0.10",
     "@types/react": "^16.8.12",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
+    "babel-loader": "^8.0.5",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
@@ -56,12 +62,6 @@
     "react": "^16.8.6",
     "rollup": "^1.8.0",
     "rollup-plugin-typescript2": "^0.20.1",
-    "typescript": "^3.4.1",
-    "@storybook/react": "^5.0.10",
-    "@storybook/addon-actions": "^5.0.10",
-    "@storybook/addon-links": "^5.0.10",
-    "@storybook/addons": "^5.0.10",
-    "@babel/core": "^7.4.3",
-    "babel-loader": "^8.0.5"
+    "typescript": "^3.4.1"
   }
 }
