chore: CHange push policy

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,9 @@
 name: release
 
-# on:
-#   push:
-#     branches:
-#       - master
-#     tags:
-#       - v*
+on:
+  push:
+    branches:
+      - *
 
 jobs:
   install:
