--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,6 @@ jobs:
       - run: npm install -g yarn
       - run: yarn
       - run: chmod -R +x ./node_modules/.bin
-      - uses: actions/upload-artifact@v1
-        with:
-          name: node_modules
-          path: node_modules
 
   build:
     needs: install
@@ -30,9 +26,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - uses: actions/download-artifact@v1
+      - uses: actions/cache@v1
         with:
-          name: node_modules
+          path: node_modules
+          key: react-editor-js-${{ hashFiles('**/yarn.lock') }}
       - run: yarn build
       - uses: actions/upload-artifact@v1
         with:
