--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "@editorjs/simple-image": "^1.3.3",
     "@editorjs/table": "^1.2.0",
     "@editorjs/warning": "^1.1.0",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/github": "^7.0.5",
+    "@semantic-release/npm": "^7.0.5",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addons": "^5.2.8",
