chore: Add conventional-commit dep

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-loader": "^8.0.5",
+    "conventional-changelog-conventionalcommits": "^4.2.3",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.19.1",
