--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@editorjs/table": "^1.2.0",
     "@editorjs/warning": "^1.1.0",
     "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.5",
     "@semantic-release/npm": "^7.0.5",
     "@semantic-release/release-notes-generator": "^9.0.1",
