--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   install:
     runs-on: ubuntu-latest
+    if: "! contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
