--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -5,6 +5,7 @@ daysUntilClose: 7
 # Issues with these labels will never be considered stale
 exemptLabels:
   - dependencies
+  - enhancement
 
 # Label to use when marking an issue as stale
 staleLabel: inactive
