--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rollup --config --environment NODE_ENV:production",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006"
   },
   "license": "MIT",
   "repository": {
@@ -27,51 +27,53 @@
     "url": "https://github.com/Jungwoo-An/react-editor-js/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
+    "@babel/core": "^7.14.6",
     "@editorjs/checklist": "^1.3.0",
-    "@editorjs/code": "^2.6.0",
+    "@editorjs/code": "^2.7.0",
     "@editorjs/delimiter": "^1.2.0",
-    "@editorjs/editorjs": "^2.19.1",
-    "@editorjs/embed": "^2.4.0",
+    "@editorjs/editorjs": "^2.22.1",
+    "@editorjs/embed": "^2.4.6",
     "@editorjs/header": "^2.6.1",
     "@editorjs/image": "^2.6.0",
     "@editorjs/inline-code": "^1.3.1",
     "@editorjs/link": "^2.3.1",
-    "@editorjs/list": "^1.6.1",
+    "@editorjs/list": "^1.6.2",
     "@editorjs/marker": "^1.2.2",
     "@editorjs/paragraph": "^2.8.0",
     "@editorjs/quote": "^2.4.0",
     "@editorjs/raw": "^2.3.0",
-    "@editorjs/simple-image": "^1.4.0",
+    "@editorjs/simple-image": "^1.4.1",
     "@editorjs/table": "^1.3.0",
     "@editorjs/warning": "^1.2.0",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.0.5",
-    "@semantic-release/npm": "^7.0.5",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "@storybook/addon-actions": "^5.2.8",
-    "@storybook/addon-links": "^5.2.8",
-    "@storybook/addons": "^5.2.8",
-    "@storybook/react": "^5.2.8",
-    "@types/react": "^16.9.16",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "babel-loader": "^8.0.5",
-    "conventional-changelog-conventionalcommits": "^4.2.3",
-    "eslint": "^6.7.2",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "react": "^16.12.0",
-    "rollup": "^1.27.9",
-    "rollup-plugin-typescript2": "^0.25.3",
-    "typescript": "^3.7.3"
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.3",
+    "@storybook/addon-actions": "^6.3.4",
+    "@storybook/addon-essentials": "^6.3.4",
+    "@storybook/addon-links": "^6.3.4",
+    "@storybook/react": "^6.3.4",
+    "@types/react": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "babel-loader": "^8.2.2",
+    "conventional-changelog-conventionalcommits": "^4.6.0",
+    "eslint": "^7.30.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rollup": "^2.53.2",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "@editorjs/editorjs": "*",
     "@editorjs/paragraph": "*"
-  }
+  },
+  "dependencies": {}
 }
