chore: Enable esModuleInterop, allowSyntheticDefaultImports

--- a/packages/react-editor-js/tsconfig.json
+++ b/packages/react-editor-js/tsconfig.json
@@ -9,6 +9,8 @@
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "noImplicitAny": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./"
   }
 }
