--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,13 @@
 {
   "name": "@react-editor-js/core",
   "version": "2.0.0",
-  "description": "The unofficial editor-js component for React on client"
+  "description": "The unofficial editor-js component for React on client",
+  "peerDependencies": {
+    "@editorjs/editorjs": "*",
+    "react": "*"
+  },
+  "devDependencies": {
+    "@editorjs/editorjs": "*",
+    "react": "*"
+  }
 }
