--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,20 @@
 {
   "name": "@react-editor-js/client",
   "version": "2.0.0",
-  "description": "The unofficial editor-js component for React on client"
+  "description": "The unofficial editor-js component for React on client",
+  "peerDependencies": {
+    "@editorjs/editorjs": "*",
+    "@editorjs/paragraph": "*",
+    "@react-editor-js/core": "*",
+    "react": "*"
+  },
+  "dependencies": {
+    "@react-editor-js/core": "workspace:packages/core"
+  },
+  "devDependencies": {
+    "@editorjs/editorjs": "*",
+    "@editorjs/paragraph": "*",
+    "@types/react": "*",
+    "react": "*"
+  }
 }
