--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,16 @@
 {
   "name": "@react-editor-js/server",
   "version": "2.0.0",
-  "description": "The unofficial editor-js component for React on server"
+  "description": "The unofficial editor-js component for React on server",
+  "peerDependencies": {
+    "@react-editor-js/core": "*",
+    "react": "*"
+  },
+  "dependencies": {
+    "@react-editor-js/core": "workspace:packages/core"
+  },
+  "devDependencies": {
+    "@types/react": "*",
+    "react": "*"
+  }
 }
