--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "paths": {
-      "@react-editor-js/*": ["packages/*/src"]
+      "@react-editor-js/*": ["packages/@react-editor-js/*/src"]
     }
   }
 }
