--- a/packages/@react-editor-js/server/package.json
+++ b/packages/@react-editor-js/server/package.json
@@ -7,7 +7,7 @@
     "react": "*"
   },
   "dependencies": {
-    "@react-editor-js/core": "workspace:packages/core"
+    "@react-editor-js/core": "workspace:packages/@react-editor-js/core"
   },
   "devDependencies": {
     "@types/react": "*",
