chore: Configure workspaces build command

--- a/packages/@react-editor-js/core/package.json
+++ b/packages/@react-editor-js/core/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@editorjs/editorjs": "*",
-    "react": "*"
+    "react": "*",
+    "typescript": "^4.3.5"
   }
 }
