--- a/packages/react-editor-js/package.json
+++ b/packages/react-editor-js/package.json
@@ -6,8 +6,12 @@
     "@react-editor-js/client": "*",
     "@react-editor-js/server": "*"
   },
-  "devDependencies": {
+  "dependencies": {
     "@react-editor-js/client": "workspace:packages/@react-editor-js/client",
     "@react-editor-js/server": "workspace:packages/@react-editor-js/server"
+  },
+  "devDependencies": {
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5"
   }
 }
