--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,9 +1,14 @@
 {
   "compilerOptions": {
+    "target": "ES2015",
+    "module": "ESNext",
     "baseUrl": ".",
     "jsx": "react",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "declaration": true,
+    "sourceMap": true,
     "paths": {
       "@react-editor-js/*": ["packages/@react-editor-js/*/src"]
     }
