--- a/packages/@react-editor-js/client/package.json
+++ b/packages/@react-editor-js/client/package.json
@@ -15,6 +15,8 @@
     "@editorjs/editorjs": "*",
     "@editorjs/paragraph": "*",
     "@types/react": "*",
-    "react": "*"
+    "react": "*",
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5"
   }
 }
