--- a/packages/@react-editor-js/server/package.json
+++ b/packages/@react-editor-js/server/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@types/react": "*",
-    "react": "*"
+    "react": "*",
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5"
   }
 }
