--- a/packages/@react-editor-js/client/package.json
+++ b/packages/@react-editor-js/client/package.json
@@ -2,6 +2,9 @@
   "name": "@react-editor-js/client",
   "version": "2.0.0",
   "description": "The unofficial editor-js component for React on client",
+  "main": "./dist/client.cjs.js",
+  "module": "./dist/client.js",
+  "types": "./dist/client/src/index.d.ts",
   "peerDependencies": {
     "@editorjs/editorjs": "*",
     "@editorjs/paragraph": "*",
