--- a/packages/react-editor-js/package.json
+++ b/packages/react-editor-js/package.json
@@ -2,6 +2,9 @@
   "name": "react-editor-js",
   "version": "2.0.0",
   "description": "The unofficial editor-js component for React",
+  "main": "./dist/react-editor-js.cjs.js",
+  "module": "./dist/react-editor-js.js",
+  "types": "./dist/react-editor-js/src/index.d.ts",
   "peerDependencies": {
     "@react-editor-js/client": "*",
     "@react-editor-js/server": "*"
