--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,10 @@ name: release
 
 on: [push]
 
+env:
+  GITHUB_TOKEN: ${{secrets.GITHUB_ACCESS_TOKEN}}
+  NPM_TOKEN: ${{secrets.NPM_ACCESS_TOKEN}}
+
 jobs:
   release:
     runs-on: ubuntu-latest
