--- a/packages/@react-editor-js/client/package.json
+++ b/packages/@react-editor-js/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-editor-js/client",
-  "version": "1.10.0",
+  "version": "2.0.0",
   "description": "The unofficial editor-js component for React on client",
   "main": "./dist/client.cjs.js",
   "module": "./dist/client.js",
@@ -8,11 +8,11 @@
   "peerDependencies": {
     "@editorjs/editorjs": "*",
     "@editorjs/paragraph": "*",
-    "@react-editor-js/core": "*",
+    "@react-editor-js/core": "2.0.0",
     "react": "*"
   },
   "dependencies": {
-    "@react-editor-js/core": "workspace:packages/@react-editor-js/core"
+    "@react-editor-js/core": "2.0.0"
   },
   "devDependencies": {
     "@editorjs/editorjs": "*",
