--- a/packages/@react-editor-js/server/package.json
+++ b/packages/@react-editor-js/server/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@react-editor-js/server",
-  "version": "1.10.0",
+  "version": "2.0.0",
   "description": "The unofficial editor-js component for React on server",
   "main": "./dist/server.cjs.js",
   "module": "./dist/server.js",
   "types": "./dist/server/src/index.d.ts",
   "peerDependencies": {
-    "@react-editor-js/core": "*",
+    "@react-editor-js/core": "2.0.0",
     "react": "*"
   },
   "dependencies": {
-    "@react-editor-js/core": "workspace:packages/@react-editor-js/core"
+    "@react-editor-js/core": "2.0.0"
   },
   "devDependencies": {
     "@types/react": "*",
