chore(codesandbox): Change example

--- a/examples/package.json
+++ b/examples/package.json
@@ -22,6 +22,7 @@
     "@editorjs/table": "latest",
     "@editorjs/warning": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-editor-js": "latest"
   }
 }
