--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "release-it": "^14.11.6",
     "release-it-yarn-workspaces": "^2.0.1",
     "rollup": "^2.58.3",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "semver": "^7.3.5",
     "typescript": "^4.3.5"
