--- a/packages/@react-editor-js/client/package.json
+++ b/packages/@react-editor-js/client/package.json
@@ -5,6 +5,14 @@
   "main": "./dist/client.cjs.js",
   "module": "./dist/client.js",
   "types": "./dist/client/src/index.d.ts",
+  "author": "Jungwoo An <o1o9814@naver.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jungwoo-An/react-editor-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Jungwoo-An/react-editor-js/issues"
+  },
   "peerDependencies": {
     "@editorjs/editorjs": "*",
     "@editorjs/paragraph": "*",
