--- a/packages/@react-editor-js/server/package.json
+++ b/packages/@react-editor-js/server/package.json
@@ -5,6 +5,14 @@
   "main": "./dist/server.cjs.js",
   "module": "./dist/server.js",
   "types": "./dist/server/src/index.d.ts",
+  "author": "Jungwoo An <o1o9814@naver.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jungwoo-An/react-editor-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Jungwoo-An/react-editor-js/issues"
+  },
   "peerDependencies": {
     "@react-editor-js/core": "2.0.0",
     "react": "*"
