--- a/package.json
+++ b/package.json
@@ -10,13 +10,6 @@
     "packages/@react-editor-js/*",
     "packages/react-editor-js"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Jungwoo-An/react-editor-js.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Jungwoo-An/react-editor-js/issues"
-  },
   "devDependencies": {
     "@release-it/conventional-changelog": "^3.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
@@ -25,6 +18,7 @@
     "release-it": "^14.11.6",
     "release-it-yarn-workspaces": "^2.0.1",
     "rollup": "^2.58.3",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "semver": "^7.3.5",
     "typescript": "^4.3.5"
