--- a/packages/react-editor-js/package.json
+++ b/packages/react-editor-js/package.json
@@ -22,6 +22,7 @@
     "@react-editor-js/server": "2.0.1"
   },
   "devDependencies": {
+    "@types/node": "^16.11.6",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   }
