--- a/packages/react-editor-js/package.json
+++ b/packages/react-editor-js/package.json
@@ -4,7 +4,7 @@
   "description": "The unofficial editor-js component for React",
   "main": "./dist/react-editor-js.cjs.js",
   "module": "./dist/react-editor-js.js",
-  "types": "./dist/react-editor-js/src/index.d.ts",
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/Jungwoo-An/react-editor-js.git"
