--- a/packages/@react-editor-js/core/package.json
+++ b/packages/@react-editor-js/core/package.json
@@ -14,11 +14,15 @@
   },
   "peerDependencies": {
     "@editorjs/editorjs": "*",
+    "@editorjs/paragraph": "*",
     "react": "*"
   },
   "devDependencies": {
     "@editorjs/editorjs": "*",
+    "@editorjs/paragraph": "*",
+    "@types/react": "*",
     "react": "*",
+    "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   }
 }
