--- a/packages/@react-editor-js/core/package.json
+++ b/packages/@react-editor-js/core/package.json
@@ -20,8 +20,11 @@
   "devDependencies": {
     "@editorjs/editorjs": "*",
     "@editorjs/paragraph": "*",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.3",
     "@types/react": "*",
     "react": "*",
+    "react-dom": "^17.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   }
