chore(ci): Change job name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ env:
   NPM_TOKEN: ${{secrets.NPM_ACCESS_TOKEN}}
 
 jobs:
-  release:
+  test:
     runs-on: ubuntu-latest
     if: "github.ref != 'refs/heads/master'"
     steps:
