--- a/packages/@react-editor-js/core/package.json
+++ b/packages/@react-editor-js/core/package.json
@@ -4,7 +4,7 @@
   "description": "The unofficial editor-js component for React on client",
   "main": "./dist/core.cjs.js",
   "module": "./dist/core.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/Jungwoo-An/react-editor-js.git"
@@ -14,11 +14,18 @@
   },
   "peerDependencies": {
     "@editorjs/editorjs": "*",
+    "@editorjs/paragraph": "*",
     "react": "*"
   },
   "devDependencies": {
     "@editorjs/editorjs": "*",
+    "@editorjs/paragraph": "*",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.3",
+    "@types/react": "*",
     "react": "*",
+    "react-dom": "^17.0.2",
+    "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   }
 }
