refactor: Add ClientEditorCore class

--- a/packages/@react-editor-js/client/package.json
+++ b/packages/@react-editor-js/client/package.json
@@ -14,6 +14,7 @@
   },
   "peerDependencies": {
     "@editorjs/editorjs": "*",
+    "@editorjs/paragraph": "*",
     "react": "*"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@editorjs/editorjs": "*",
+    "@editorjs/paragraph": "*",
     "@types/react": "*",
     "react": "*",
     "typescript": "^4.3.5"
