--- a/packages/@react-editor-js/client/package.json
+++ b/packages/@react-editor-js/client/package.json
@@ -25,6 +25,7 @@
     "@editorjs/paragraph": "*",
     "@types/react": "*",
     "react": "*",
+    "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   }
 }
