chore: 의존성 정리

--- a/packages/react-editor-js/package.json
+++ b/packages/react-editor-js/package.json
@@ -12,12 +12,9 @@
   "bugs": {
     "url": "https://github.com/Jungwoo-An/react-editor-js/issues"
   },
-  "peerDependencies": {
-    "@react-editor-js/client": "2.0.6",
-    "@react-editor-js/server": "2.0.6"
-  },
   "dependencies": {
     "@react-editor-js/client": "2.0.6",
+    "@react-editor-js/core": "2.0.6",
     "@react-editor-js/server": "2.0.6"
   },
   "devDependencies": {
